[package]
name = "fcoin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
num = "0.4"
sha2 = "0.9"
ctrlc = "3.2"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
tokio-serde = {version = "0.8", features = ["bincode"] }
bincode = "1.3"
serde = {version = "1.0", features = ["derive"] }
serde-big-array = "0.3"
